--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
   min-height: 100vh;
   /* overflow: hidden; */
   font-family: "Abel", sans-serif;
+  color: #fff;
   background-color: #19151a;
 }
 
@@ -63,6 +64,37 @@ body {
   display: flex;
 }
 
+.switcher-container {
+  align-self: center;
+  width: 60px;
+  height: 30px;
+  border-radius: 50px;
+  position: relative;
+}
+
+.switcher {
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  border-radius: 50px;
+  background-color: rgb(35, 123, 199);
+  position: absolute;
+  transform: translate(-100%, -50%);
+  border: 1px solid #fff;
+  transition: transform 0.5s ease;
+}
+
+.change-switch {
+  transform: translate(0%, -50%);
+}
+
+.switch-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2em 0;
+}
+
 /* LAYOUT */
 
 .light-board {
@@ -85,6 +117,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .change-color {
@@ -104,10 +137,17 @@ body {
 
 .control-section {
   margin-bottom: 1em;
+  padding-left: 2.5em;
 }
 
 .control-section-btn {
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.size-input {
+  width: 100%;
 }
 
 /* ANIMATIONS */
@@ -135,39 +175,47 @@ body {
 @keyframes glow1 {
   0%,
   100% {
-    box-shadow: 0 0 20px 5px #c0392b;
+    background-color: rgba(192, 57, 43, 1);
+    box-shadow: 0 0 20px 5px rgba(192, 57, 43, 1);
   }
   50% {
-    box-shadow: none;
+    background-color: rgba(192, 57, 43, 0.5);
+    box-shadow: 0 0 20px 5px rgba(192, 57, 43, 0.1);
   }
 }
 
 @keyframes glow2 {
   0%,
   100% {
-    box-shadow: none;
+    background-color: rgba(46, 204, 113, 0.5);
+    box-shadow: 0 0 20px 5px rgba(46, 204, 113, 0.1);
   }
   50% {
-    box-shadow: 0 0 20px 5px #2ecc71;
+    background-color: rgba(46, 204, 113, 1);
+    box-shadow: 0 0 20px 5px rgba(46, 204, 113, 1);
   }
 }
 
 @keyframes glow3 {
   0%,
   100% {
-    box-shadow: 0 0 20px 5px#64fcfe;
+    background-color: rgba(100, 252, 254, 1);
+    box-shadow: 0 0 20px 5px rgba(100, 252, 254, 1);
   }
   50% {
-    box-shadow: none;
+    background-color: rgba(100, 252, 254, 0.5);
+    box-shadow: 0 0 20px 5px rgba(100, 252, 254, 0.1);
   }
 }
 
 @keyframes glow4 {
   0%,
   100% {
-    box-shadow: none;
+    background-color: rgba(241, 196, 15, 0.5);
+    box-shadow: 0 0 20px 5px rgba(241, 196, 15, 0.1);
   }
   50% {
-    box-shadow: 0 0 20px 5px #f1c40f;
+    background-color: rgba(241, 196, 15, 1);
+    box-shadow: 0 0 20px 5px rgba(241, 196, 15, 1);
   }
 }
