--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-input {
+input[type="number"] {
   width: 250px;
   border: none;
   border: 2px solid #483d8b;
@@ -18,9 +18,9 @@ input {
 
 label {
   display: inline-block;
-  margin-bottom: 0.3em;
   font-weight: 800;
   color: aliceblue;
+  margin-bottom: 0.5em;
 }
 
 /* GENERAL STYLING */
@@ -136,8 +136,10 @@ body {
 /* Light controls*/
 
 .control-section {
-  margin-bottom: 1em;
-  padding-left: 2.5em;
+  margin: 1em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .control-section-btn {
@@ -148,6 +150,10 @@ body {
 
 .size-input {
   width: 100%;
+}
+
+.range-container {
+  display: none;
 }
 
 /* ANIMATIONS */
